# lockin

./: CLAUDE.md  README.md  main.py  pyproject.toml
lockin/: __init__.py  activity_db.py  apps.py  blocker.py  categorizer.py  cli.py  config.py  daemon.py  menubar.py  presets.py  recap.py  session.py  tracker.py  ui.py
