[project]
name = "lockin"
version = "0.4.0"
description = "CLI focus blocker for macOS — block distracting websites and apps"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32.5",
    "rich>=13.0.0",
    "psutil>=5.9.0",
    "rumps>=0.4.0",
    "pyobjc-framework-Quartz>=10.0",
    "pyobjc-framework-ApplicationServices>=10.0",
]

[project.scripts]
lockin = "lockin.cli:main"
lockin-menubar = "lockin.menubar:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "build>=1.4.0",
    "twine>=6.2.0",
]
